# cargo-xtasks

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  Readme.md
.cargo/: config.toml
.github/workflows/: rust.yml
src/: bin.rs  cargo_metadata.rs  command_ext.rs  fs.rs  lib.rs
src/cmds/: build_web.rs  cbin.rs  mod.rs  run_web.rs
